# cbuf

./: CMakeLists.txt  README.md  cbuf.c  cbuf.h  cbuf_benchmark.c
test/: CMakeLists.txt  cbuf_test.cpp
